# general-ai-synapse

./: .gitignore  README.md  main.py  news.csv  pyproject.toml
synapse/components/: generate_pdf.py  get_news.py
synapse/config/: config.py
synapse/pipelines/: supervisor.py
synapse/prompts/: summary_prompt.txt
synapse/utils/: llm_utils.py  logger.py
